--- a/terraform/docker-compose.yaml
+++ b/terraform/docker-compose.yaml
@@ -3,9 +3,16 @@ services:
   catgpt:
     container_name: bingo
     image: "cr.yandex/crp10pq00qo5b4oh3tvv/bingo:v1"
+    #image: "bingo-test:v2"
     command: ['/bin/sh','-c','./bingo run_server']
     restart: always
     network_mode: "host"
     volumes:
-      - '/opt/bingo/logs/':'/opt/bongo/logs/359c71e299/'
+      - "/opt/bingo/logs:/opt/bongo/logs/359c71e299/"
+    healthcheck:
+      test: ["CMD-SHELL","curl -f http://localhost:20061/ping || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 2
+      start_period: 50s
 
